jwt token filter added to gateway service

--- a/docker-compose/mongodb.yml
+++ b/docker-compose/mongodb.yml
@@ -4,13 +4,14 @@ services:
   mongo:
     image: mongo
     restart: on-failure
+    container_name: chat-db
     ports:
       - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     networks:
-      - ${GLOBAL_NETWORK:-mongodb}
+      - ${GLOBAL_NETWORK:-chat-db}
       - ${GLOBAL_NETWORK:-services}
   mongo-express:
     image: mongo-express
