--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -11,6 +11,9 @@
 
     <artifactId>kafka</artifactId>
 
+    <modules>
+        <module>kafka-model</module>
+    </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
