--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>elastic/elastic-config</module>
         <module>elastic/elastic-model</module>
         <module>elastic/elastic-query</module>
+        <module>asset-service</module>
 
     </modules>
     <repositories>
@@ -82,11 +83,6 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-mongodb</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-security</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
@@ -200,12 +196,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring-boot.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <version>${spring-boot.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>net.logstash.logback</groupId>
@@ -372,6 +362,20 @@
                 <scope>test</scope>
             </dependency>
             <!-- KOTLIN SUPPORT -->
+
+            <!--	POSTGRESQL	-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>42.2.23</version>
+            </dependency>
+            <!--	END OF POSTGRESQL	-->
         </dependencies>
     </dependencyManagement>
 
