--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -49,6 +49,29 @@
             <version>2.0.1.Final</version>
         </dependency>
         <!--	END OF POSTGRESQL	-->
+
+        <!--	KAFKA	-->
+        <dependency>
+            <groupId>com.chat</groupId>
+            <artifactId>kafka-producer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.chat</groupId>
+            <artifactId>kafka-admin</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.chat</groupId>
+            <artifactId>kafka-model</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.chat</groupId>
+            <artifactId>kafka-consumer</artifactId>
+        </dependency>
+        <!--	KAFKA	-->
     </dependencies>
 
     <build>
