dummy asset endpoints added

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -70,6 +70,14 @@
             <artifactId>kotlin-test</artifactId>
         </dependency>
         <!-- KOTLIN SUPPORT -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
