--- a/asset-service/pom.xml
+++ b/asset-service/pom.xml
@@ -18,6 +18,13 @@
     </properties>
 
     <dependencies>
+        <!--  @VALID  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <!--  @VALID  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
