--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -17,6 +17,7 @@
     "bullmq": "^3.13.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "kafkajs": "^2.2.4",
     "rxjs": "^7.8.1"
   },
