--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -13,13 +13,16 @@
     "@nestjs/core": "^9.4.0",
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/sequelize": "^9.0.2",
     "@onesignal/node-onesignal": "^2.0.0-beta1",
     "bullmq": "^3.13.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "kafkajs": "^2.2.4",
-    "rxjs": "^7.8.1"
+    "pg": "^8.10.0",
+    "rxjs": "^7.8.1",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@types/node": "^20.1.2"
