--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "kafkajs": "^2.2.4",
+    "moment-timezone": "^0.5.43",
     "pg": "^8.10.0",
     "rxjs": "^7.8.1",
     "sequelize-typescript": "^2.1.5"
