--- a/docker-compose/postgresql.yml
+++ b/docker-compose/postgresql.yml
@@ -2,20 +2,17 @@ version: '3.8'
 services:
   postgresql:
     image: postgres:14.1-alpine
-    command: postgres -c 'max_connections=200'
+    command: postgres -c 'max_connections=300'
     restart: on-failure
     hostname: localhost
-    container_name: user-db
+    container_name: postgresql
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - '5432:5432'
-    volumes:
-      - db:/var/lib/postgresql/data
     networks:
-      - ${GLOBAL_NETWORK:-db-user}
-      - ${GLOBAL_NETWORK:-services}
+      - ${GLOBAL_NETWORK:-db}
 
 volumes:
   db:
